[package]
name = "vpb"
version = "0.1.0"
edition = "2021"

[lib]
name = "vpb"
path = "src/vpb.rs"

[toolchain]
channel = "nightly"

[profile.dev]
opt-level = 0
[profile.dev.package."*"]
opt-level = 3

[dependencies]
ash = { version = "0.37.2+1.3.238", features = ["linked"] }
ash-window = "0.12.0"
raw-window-handle = "0.5.1"
winit = "0.28.3"
image = "0.24.5"
shaderc = "0.8.2"
bytemuck = "1.13.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.96"