[package]
name = "vpb"
version = "0.1.0"
edition = "2021"

[lib]
name = "vpb"
path = "src/vpb.rs"

[toolchain]
channel = "nightly"

[profile.dev]
opt-level = 0
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# gpu-alloc = "0.6.0"
# gpu-alloc-ash = "0.6.0"
vk-mem = "0.2.2"
ash = { version = "0.37", features = ["linked"] }
ash-window = "0.12.0"
raw-window-handle = "0.5.1"
glfw = { version = "0.52.0", features = ["vulkan"] }
image = "0.24.5"
shaderc = "0.8.2"
bytemuck = "1.13.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.96"
nalgebra = "0.31.4"
png = "0.17.9"